update Applications query